--- a/frontend/src/app/modules/auth/components/login/login.component.html
+++ b/frontend/src/app/modules/auth/components/login/login.component.html
@@ -120,5 +120,5 @@
 </section>
 
 <section class="another-action">
-    <small class="text-hint">v{{ environment.version }}</small>
+    <small class="very-small text-hint">v{{ environment.version }}</small>
 </section>
