--- a/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
@@ -1,97 +1,17 @@
 <form #expenseForm="ngForm" (ngSubmit)="onSubmit()" autocomplete="off">
     <nb-card [nbSpinner]="isBusy" class="dialog">
-        <nb-card-header
-            class="px-0"
-            [style.background-color]="expense.confirmed ? expense.category?.color ?? UNCATEGORIZED_COLOR : 'white'">
-            <div
-                class="d-flex align-items-end justify-content-between expense-header"
-                [class.confirmed]="expense.confirmed">
-                <button
-                    nbButton
-                    type="button"
-                    tabIndex="3"
-                    (click)="expense.isExpense = !expense.isExpense"
-                    class="toggle-sign mb-2">
-                    <nb-icon [icon]="expense.isExpense ? 'minus' : 'plus'"></nb-icon>
-                </button>
-                <div class="d-flex">
-                    <div class="mx-3 w-50">
-                        <label for="expense-amount">Amount</label>
-                        <input
-                            #focus
-                            nbInput
-                            fullWidth
-                            required
-                            type="number"
-                            tabIndex="1"
-                            placeholder="{{ 0 | shortNumber }}"
-                            name="amount"
-                            id="expense-amount"
-                            [(ngModel)]="expense.absoluteAmount"
-                            class="t-input px-0 pt-3 pb-2" />
-                    </div>
-                    <div class="mx-3">
-                        <label for="expense-label">Label</label>
-                        <app-input-suggestion
-                            [input]="expense.label"
-                            (inputChanged)="handleInputChange($event)"
-                            [suggestion]="suggestedExpense?.label"
-                            (suggest)="applyLabelSuggestion()"
-                            [cssClasses]="'t-input px-0 pt-3 pb-2'">
-                            <input
-                                nbInput
-                                fullWidth
-                                required
-                                tabIndex="2"
-                                placeholder="e.g. coffee"
-                                name="label"
-                                id="expense-label"
-                                [(ngModel)]="expense.label"
-                                class="t-input px-0 pt-3 pb-2" />
-                        </app-input-suggestion>
-                    </div>
-                </div>
-            </div>
-        </nb-card-header>
         <nb-card-body class="p-0">
-            <nb-list>
-                <nb-list-item (click)="selectCalendar()" class="actionable">
-                    <nb-icon icon="calendar-outline" class="me-3"></nb-icon>
-                    <div class="text-truncate">{{ expense.calendar.name }}</div>
-                </nb-list-item>
-
-                <nb-list-item (click)="expense.confirmed = !expense.confirmed" class="actionable">
-                    <nb-icon
-                        [icon]="expense.confirmed ? 'checkmark-circle-2' : 'radio-button-off'"
-                        [status]="expense.confirmed ? 'primary' : ''"
-                        [class.active]="expense.confirmed"
-                        class="me-3"></nb-icon>
-                    <div>{{ expense.confirmed ? 'Confirmed' : 'Unconfirmed' }}</div>
-                </nb-list-item>
-
-                <nb-list-item (click)="selectCategory()" class="actionable">
-                    <nb-icon
-                        icon="radio-button-on"
-                        [ngStyle]="{ color: expense.category?.color }"
-                        class="active me-3"></nb-icon>
-                    <div class="text-truncate">{{ expense.category?.name ?? 'Uncategorized' }}</div>
-                </nb-list-item>
-
-                <nb-list-item (click)="selectDateTime()" class="actionable">
-                    <nb-icon icon="calendar-outline" class="me-3"></nb-icon>
-                    <div class="text-truncate">{{ expense.createdAt | date: 'fullDate' }}</div>
-                </nb-list-item>
-
-                <nb-list-item (click)="addDescription()" class="actionable">
-                    <nb-icon icon="file-text-outline" class="me-3"></nb-icon>
-                    <div class="text-truncate">{{ expense.description ?? 'Add description' }}</div>
-                </nb-list-item>
-
-                <nb-list-item>
-                    <nb-user [picture]="expense.user.avatar" onlyPicture size="tiny" class="me-2"></nb-user>
-                    <div class="text-truncate">{{ expense.user.name }}</div>
-                </nb-list-item>
-            </nb-list>
+            <nb-tabset fullWidth>
+                <nb-tab tabTitle="Event" class="p-0" *ngIf="!expense.id">
+                    <app-expense [expense]="expense" *nbTabContent></app-expense>
+                </nb-tab>
+                <nb-tab tabTitle="Balance" class="p-0" *ngIf="!expense.id">
+                    <app-expense-balance-update [expense]="expense" *nbTabContent></app-expense-balance-update>
+                </nb-tab>
+                <nb-tab tabTitle="Transfer" class="p-0" *ngIf="!expense.id">
+                    <app-expense-transfer [expense]="expense" *nbTabContent></app-expense-transfer>
+                </nb-tab>
+            </nb-tabset>
         </nb-card-body>
 
         <nb-card-footer>
