--- a/frontend/src/styles/animation.scss
+++ b/frontend/src/styles/animation.scss
@@ -81,7 +81,7 @@ input {
     transition: color .35s ease-in-out 0s, border .35s ease-in-out 0s;
 }
 
-nb-card-header, button {
+.animated-bg, button {
     transition: background .35s ease-in-out 0s;
 }
 
