--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-balance-update/expense-balance-update.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-balance-update/expense-balance-update.component.html
@@ -1,14 +1,9 @@
-<app-expense-input [expense]="expense" />
+<app-expense-input [expense]="expense" [labelEditable]="false" />
 
 <nb-list>
     <nb-list-item (click)="selectCalendar()" class="actionable">
         <nb-icon icon="calendar-outline" class="me-3"></nb-icon>
         <div class="text-truncate">{{ expense.calendar.name }}</div>
-    </nb-list-item>
-
-    <nb-list-item>
-        <nb-icon icon="radio-button-on" [ngStyle]="{ color: expense.category?.color }" class="active me-3"></nb-icon>
-        <div class="text-truncate text-hint">{{ expense.category?.name ?? 'Uncategorized' }}</div>
     </nb-list-item>
 
     <nb-list-item (click)="selectDateTime()" class="actionable">
