--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.html
@@ -1,6 +1,6 @@
 <div
     class="expense-header animated-bg"
-    [class.confirmed]="colorize && expense.confirmed"
+    [class.confirmed]="expense.confirmed"
     [style.background-color]="backgroundColor()">
     <div class="d-flex w-100">
         <button
