wip: expense transfer between calendars

--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.html
@@ -1,7 +1,7 @@
 <div
     class="expense-header animated-bg"
     [class.confirmed]="expense.confirmed"
-    [style.background-color]="backgroundColor()">
+    [style.background-color]="expense.confirmed && expense.category?.color ? expense.category.color : 'transparent'">
     <div class="d-flex w-100">
         <button
             nbButton
