--- a/frontend/src/app/modules/main/components/suggestion/suggestion.component.scss
+++ b/frontend/src/app/modules/main/components/suggestion/suggestion.component.scss
@@ -9,6 +9,7 @@
         left: 0;
         right: 0;
         bottom: 0;
+        line-height: 24px;
         pointer-events: none;
         overflow: hidden;
         white-space: nowrap;
