--- a/frontend/src/app/modules/main/components/suggestion/suggestion.component.scss
+++ b/frontend/src/app/modules/main/components/suggestion/suggestion.component.scss
@@ -25,5 +25,7 @@
         pointer-events: auto;
         user-select: none;
         color: nb-theme(text-hint-color);
+        display: inline-block;
+        width: 100%;
     }
 }
