fixed symfony dependencies

--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-desktop/calendar-grid-row-cell-desktop-expense-item/calendar-grid-row-cell-desktop-expense-item.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-desktop/calendar-grid-row-cell-desktop-expense-item/calendar-grid-row-cell-desktop-expense-item.component.html
@@ -3,7 +3,7 @@
 <div
     class="expense-category"
     [style.border-color]="expense.category?.color ?? UNCATEGORIZED_COLOR"
-    [style.background-color]="expense.confirmed ? expense.category?.color ?? UNCATEGORIZED_COLOR : undefined"></div>
+    [style.background-color]="expense.confirmed ? (expense.category?.color ?? UNCATEGORIZED_COLOR) : undefined"></div>
 
 <div class="expense-label text-truncate">
     {{ expense.label }}
