--- a/frontend/src/app/modules/main/dialogs/statement-import-dialog/statement-import-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/statement-import-dialog/statement-import-dialog.component.html
@@ -12,11 +12,10 @@
                     nbInput
                     fullWidth
                     required
-                    multiple
                     (change)="onChange($event)"
                     type="file"
                     accept="text/csv, text/xml, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                    name="statements[]" />
+                    name="statement" />
             </div>
         </nb-card-body>
         <nb-card-footer class="text-right">
