--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.scss
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.scss
@@ -5,17 +5,21 @@
     font-weight: normal !important;
     padding: 6em 0 1em;
     border-radius: nb-theme(border-radius) nb-theme(border-radius) 0 0;
-}
-
-:host ::ng-deep .expense-header.confirmed {
-    color: hsla(0, 0%, 100%, .8) !important;
-
-    .suggestion-suffix {
-        color: hsla(0, 0%, 100%, .6) !important;
-    }
 
     button.toggle-sign {
-        background-color: rgba(0, 0, 0, .05);
+        background-color: rgba(0, 0, 0, .2)
+    }
+}
+
+:host ::ng-deep .expense-header.confirmed .suggestion-suffix {
+    color: hsla(0, 0%, 100%, .6) !important;
+}
+
+.expense-header.confirmed {
+    color: hsla(0, 0%, 100%, .8) !important;
+
+    button.toggle-sign {
+        background-color: rgba(0, 0, 0, .1);
     }
 
     input.t-input {
