--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/balance/balance.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/balance/balance.component.html
@@ -1,6 +1,6 @@
 <form #balanceForm="ngForm" [nbSpinner]="isBusy" (ngSubmit)="onSubmit()" autocomplete="off" class="h-100">
     <div class="d-flex flex-column h-100">
-        <app-expense-input [expense]="expense" [labelEditable]="false" />
+        <app-expense-input [expense]="expense" [labelEditable]="false" #expenseInput />
 
         <div class="h-100 overflow-auto">
             <app-expense-dialog-calendar-list-item [(calendar)]="expense.calendar" />
