--- a/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
@@ -1,22 +1,22 @@
 <nb-card class="dialog">
     <nb-card-body class="p-0">
-        <nb-tabset [class.confirmed]="expense.confirmed" class="h-100" (changeTab)="onTabChange($event)">
+        <nb-tabset class="h-100" [class.confirmed]="isTabConfirmed()" (changeTab)="onTabChange($event)">
             <nb-tab
                 *ngIf="!this.expense.id || this.expense.category.type !== TYPE_BALANCE_UPDATE"
                 tabTitle="Expense"
                 class="h-100 p-0"
-                [tabId]="TYPE_UNCATEGORIZED">
-                <app-expense [expense]="expense" *nbTabContent></app-expense>
+                [tabId]="TAB_ID_EXPENSE">
+                <app-expense [expense]="expense" *nbTabContent #tabExpense></app-expense>
             </nb-tab>
-            <nb-tab *ngIf="!this.expense.id" tabTitle="Transfer" class="h-100 p-0" [tabId]="TYPE_UNCATEGORIZED">
-                <app-transfer [expense]="expense" *nbTabContent></app-transfer>
+            <nb-tab *ngIf="!this.expense.id" tabTitle="Transfer" class="h-100 p-0" [tabId]="TAB_ID_TRANSFER">
+                <app-transfer [expense]="transfer" *nbTabContent #tabTransfer></app-transfer>
             </nb-tab>
             <nb-tab
                 *ngIf="!this.expense.id || this.expense.category.type === TYPE_BALANCE_UPDATE"
                 tabTitle="Balance"
                 class="h-100 p-0"
-                [tabId]="TYPE_BALANCE_UPDATE">
-                <app-balance [expense]="expense" *nbTabContent></app-balance>
+                [tabId]="TAB_ID_BALANCE">
+                <app-balance [expense]="balance" *nbTabContent #tabBalance></app-balance>
             </nb-tab>
         </nb-tabset>
     </nb-card-body>
